k8s/base/realtime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realtime-stable
  namespace: platform
  labels:
    app: realtime
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: realtime
  ports:
    - name: http
      port: 9099
      targetPort: 9099
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: realtime-canary
  namespace: platform
  labels:
    app: realtime
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: realtime
  ports:
    - name: http
      port: 9099
      targetPort: 9099
      protocol: TCP
  type: ClusterIP
